# ovey

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  go.mod  go.sum  ovey.go
cmd/: delete_command.go  doc.go  new_command.go  root.go  var.go
lib/: consts.go  delete_device.go  echo.go  link.go  new_device.go
libocp/: Cargo.toml
libocp/advanced_examples/: Cargo.toml
libocp/advanced_examples/src/: lib.rs
libocp/src/: lib.rs  ocp_core.rs  ocp_properties.rs
libocp/src/krequests/: mod.rs
libocp/src/ocp_core/: error.rs  mod.rs  ocp.rs  orchestrator.rs  recv.rs
liboveyutil/: Cargo.toml
liboveyutil/src/: endianness.rs  guid.rs  lib.rs  lid.rs  regex.rs  types.rs  urls.rs
librdmautil/: Cargo.toml
librdmautil/src/: lib.rs
ovey_cli/: Cargo.toml  cli_test_call.sh
ovey_cli/src/: cli.rs  daemon.rs  lib.rs  main.rs  util.rs
ovey_coordinator/: Cargo.toml  demo.http
ovey_coordinator/src/: config.rs  lib.rs  main.rs
ovey_coordinator/src/data/: mod.rs
ovey_coordinator/src/db/: mod.rs
ovey_coordinator/src/res/: ovey_coordinator.json
ovey_coordinator/src/rest/: errors.rs  mod.rs  structs.rs
ovey_coordinator/src/routes/: devices.rs  gids.rs  guids.rs  handlers.rs  mod.rs  network.rs  ports.rs  qp.rs  types.rs
ovey_coordinator/src/urls/: mod.rs
ovey_daemon/: Cargo.toml  daemon_invalid_requests.http  daemon_valid_requests.http  demo.http
ovey_daemon/res/: ovey_daemon.conf.json
ovey_daemon/src/: config.rs  coordinator_service.rs  lib.rs  main.rs  ocp.rs  ocp_krequests.rs  ocp_requests.rs  routes.rs  util.rs
ovey_daemon/src/cli_rest_api/: consts.rs  errors.rs  mod.rs  structs.rs  urls.rs  validation.rs
src/: cli.rs  genlink.rs  lib.rs  main.rs  ocp.rs  verbs.rs
src/ocp/: mod.rs  ocp_core.rs  ocp_properties.rs
