[package]
name = "rdma_ovey"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# keep all projects in work space => only one single target/ dir
members = [
    "libocp",
    "librdmautil",
    "ovey_cli",
    "ovey_coordinator",
    "ovey_daemon"
]

[dependencies]
# keep all as dependencies for this dummy target
# => cargo build will build all bins and libs
"libocp" = { path = "./libocp" }
"librdmautil" = { path = "./librdmautil" }
"ovey_cli" = { path = "./ovey_cli" }
"ovey_coordinator" = { path = "./ovey_coordinator" }
"ovey_daemon" = { path = "./ovey_daemon" }
