[package]
name = "rdma_ovey"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
description = "Dummy main target for Ovey userland tools."
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# keep all projects in work space => only one single target/ dir
members = [
    "liboveyutil",
    "ovey_coordinator",
    "ovey_daemon"
]

[dependencies]
# keep all as dependencies for this dummy target
# => cargo build will build all bins and libs
"liboveyutil" = { path = "./liboveyutil" }
"ovey_coordinator" = { path = "./ovey_coordinator" }
"ovey_daemon" = { path = "./ovey_daemon" }
