[package]
name = "libocp"
description = "OVEY: Library for OCP (Ovey Control Protocol) (Netlink)."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neli = "0.5.1"  # netlink
liboveyutil = { path = "../liboveyutil" } # for guid string conversion
serde = { version = "1.0.117", features = ["derive"] }
log = "0.4.11" # for debug!, trace! etc
