[package]
name = "libocp"
description = "OVEY: Library for OCP (Ovey Control Protocol) (Netlink)."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# neli = { version = "0.5.1", features = ["logging"]}  # netlink
neli = "=0.5.2" # netlink
liboveyutil = { path = "../liboveyutil" } # guid string conversion, types, uuid, and some other utils/re-exports
log = "0.4.11" # for debug!, trace! etc
derive_more = "0.99.11"
libc = "0.2.81" # for status codes like EINVAL or EEXISTS
