[package]
name = "liboveyutil"
description = "OVEY: Library for all other utility functions for Ovey project."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }

[dev-dependencies]
libocp = { path = "../libocp" } # consts for tests
