[package]
name = "liboveyutil"
description = "OVEY: Library for all other utility functions for Ovey project."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
serde = { version = "1.0.118", features = ["derive"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
enum_dispatch = { version = "0.3.7" }
actix-web = {version = "3.3.2"}
actix-rt = {version = "1.1.1"}
awc = {version = "2.0"}
serde_json = "1.0"
serde_urlencoded = "0.7"
http = "0.2"
