[package]
name = "librdmautil"
description = "OVEY: Library for utily functions for Linux RDMA stack (OFED/Verbs). For example GUID to string conversion."
version = "0.1.0"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
