[package]
name = "ovey_cli"
description = "OVEY: Executable Ovey CLI"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libocp = { path = "../libocp" }
liboveyutil = { path = "../liboveyutil" }
ovey_daemon = { path = "../ovey_daemon" }

clap = "2.33.3" # command line parsing
regex = "1.3.9"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
actix-http = "2.1.0" # for StatusCode-enum

