[package]
name = "ovey_cli"
description = "OVEY: Executable Ovey CLI"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libocp = { path = "../libocp" } # constants for validating
liboveyutil = { path = "../liboveyutil" } # guid string conversion, types, uuid, and some other utils/re-exports
ovey_daemon = { path = "../ovey_daemon" } # definition for REST interface
ovey_coordinator = { path = "../ovey_coordinator" } # definition for REST interface

clap = "2.33.3" # command line parsing
regex = "1.3.9"
reqwest = { version = "0.10.10", features = ["json", "blocking"] }
actix-http = "2.1.0" # for StatusCode-enum
lazy_static = "1.4.0"
log = "0.4.11"

