[package]
name = "ovey_coordinator"
description = "OVEY: Binary Ovey Coordinator"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
