[package]
name = "ovey_coordinator"
description = "OVEY: Binary Ovey Coordinator"
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librdmautil = { path = "../librdmautil" }

actix-web = "3.2.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
json = "0.12.4"
env_logger = "0.8.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"

[dev-dependencies]
actix-rt = "1.1.1" # for tests