[package]
name = "ovey_coordinator"
description = "OVEY: Executable Ovey Coordinator. Offers a REST-API for OVEY Coordinators. Stores information about the RDMA devices in a virtualized network."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liboveyutil = { path = "../liboveyutil" }

actix-web = "3.2.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
json = "0.12.4"
env_logger = "0.8.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
lazy_static = "1.4.0"
derive_builder = "0.9.0"
derive_more = "0.99.11"
log = "0.4.0" # info!, debug! etc. macros; works with Actix Logging Environment

[dev-dependencies]
actix-rt = "1.1.1" # for tests