[package]
name = "ovey_daemon"
description = "OVEY: Executable Ovey Deamon. Communicates with Ovey Coordinators. Offers a REST-API for OVEY CLI."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
json = "0.12.4"
lazy_static = "1.4.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
reqwest = { version = "0.10.8", features = ["blocking", "json"] }

ovey_coordinator = { path = "../ovey_coordinator" }