[package]
name = "ovey_daemon"
description = "OVEY: Executable Ovey Deamon. Communicates with Ovey Coordinators. Offers a REST-API for OVEY CLI."
version = "0.1.0"
authors = ["Philipp Schuster <philipp_johannes.schuster@mailbox.tu-dresden.de>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"
json = "0.12.4"
reqwest = { version = "0.10.10", features = ["json"] }
regex = "1.3.9"
env_logger = "0.8.2"
derive_builder = "0.9.0"
derive_more = "0.99.11"
lazy_static = "1.4.0"
log = "0.4.11"
simple_on_shutdown = "0.3.0"

ovey_coordinator = { path = "../ovey_coordinator" }
libocp = { path = "../libocp" }
liboveyutil = { path = "../liboveyutil" } # guid string conversion, types, uuid, and some other utils/re-exports





# [dev-dependencies]
actix-rt = "1.1.1" # for tests